Implemented the matchWord filter type for searches and updated docs accordingly. The docs still don't fully explain everything, I'm working on it.
